fix: overflow

--- a/HomePage/AdaptivetyHome.css
+++ b/HomePage/AdaptivetyHome.css
@@ -1177,6 +1177,7 @@ top: 397px;
         width: 100%;
         margin: 0 auto;
         overflow-x: hidden;
+        overflow: hidden;
     }
 
     .burger-menu-content {
